crash internal animation player #55675

Closed
opened 2018-06-29 17:44:17 +02:00 by Pablo Fournier · 13 comments

Broken:ccca2c01649

when I try to scrub on the player it crash

Broken:ccca2c01649 when I try to scrub on the player it crash
Author

Added subscriber: @PabloFournier

Added subscriber: @PabloFournier

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Note, the crash is because we are trying to divide by zero.
in blf_glyph.c i is zero:
i = (int)((gc->p2_width - (gc->pad * 2)) / gc->glyph_width_max);

Full backtrace: P745

Note, the crash is because we are trying to divide by zero. in blf_glyph.c i is zero: `i = (int)((gc->p2_width - (gc->pad * 2)) / gc->glyph_width_max);` Full backtrace: [P745](https://archive.blender.org/developer/P745.txt)

And for the records, you can reproduce the error with: ./blender -a -f 24 1.0 -s 1 -e 10 -j 1 /tmp/0001.png for a rendered sequence (it crashes once you scrab).

And for the records, you can reproduce the error with: `./blender -a -f 24 1.0 -s 1 -e 10 -j 1 /tmp/0001.png` for a rendered sequence (it crashes once you scrab).
Ray molenkamp was assigned by Dalai Felinto 2018-06-29 18:20:51 +02:00

Added subscriber: @fclem

Added subscriber: @fclem

There is a chance that this never worked in 2.8. But there is also a chance this was crashed with the recent OpenGL and BLF refactors.
To be honest I can barely bisect this since the moment I roll a few commits back, I get GWN_vao_alloc(): Assertionactive_ctx' failed.` or worse.

There is a chance that this never worked in 2.8. But there is also a chance this was crashed with the recent OpenGL and BLF refactors. To be honest I can barely bisect this since the moment I roll a few commits back, I get ` GWN_vao_alloc(): Assertion `active_ctx' failed.` or worse.
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

gpu_extensions_init is never called, P746 fixes it but @ideasman42 thought that calling GPU_Init was a bit heavy for what the player needed. P747 does the trick as well without having to call GPU_init, i'm not familiar enough with the player code to have a strong opinion here.

gpu_extensions_init is never called, [P746](https://archive.blender.org/developer/P746.txt) fixes it but @ideasman42 thought that calling `GPU_Init` was a bit heavy for what the player needed. [P747](https://archive.blender.org/developer/P747.txt) does the trick as well without having to call `GPU_init`, i'm not familiar enough with the player code to have a strong opinion here.

Added subscriber: @brecht

Added subscriber: @brecht

I'm not sure why we wouldn't just call GPU_init() and GPU_exit(), different code paths for regular Blender and the animation player just make bugs more likely.

I'm not sure why we wouldn't just call `GPU_init()` and `GPU_exit()`, different code paths for regular Blender and the animation player just make bugs more likely.

This issue was referenced by bf7c815169

This issue was referenced by bf7c8151696255910594dcd9de1b4af7e7bdd296

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

@brecht, saw code-gen and orphan-texture creation, but looking closer - it's not heavy stuff, committed.

@brecht, saw code-gen and orphan-texture creation, but looking closer - it's not heavy stuff, committed.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55675
No description provided.