Fix T55675: Crash internal animation player